【api】团队解散API
